--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   
   <body>
     <div>
+      <!--title-->
       <section>
         <img src="images/Forging_BG.jpg" alt="Sword Logo"/>
       </section>
@@ -13,7 +14,7 @@
       <div class="titleContainer">
         <img class="titleImg" src="images/anvil.png" alt="Anvil Logo"/>
         <div class="titleText">
-          <p>Sword 101</p>
+          <p>All You Need To Know About Swords</p>
         </div>
       </div>
     </div>
@@ -32,7 +33,7 @@
       </nav>
       <hr>
     </div>
-
+    <!--sword making-->
     <div class="page" id="page1">
       <div class="ImgItem">
         <div class="scene">
@@ -88,26 +89,92 @@
         After that, your first sword is complete!
       </div>
     </div>
+    <!--types of swords-->
     <div class="page" id="page2">
-    page 2 content
+      <div class="TextItem">
+        A katana is a Japanese sword characterized by a curved, single-edged blade with a circular or squared guard and long grip to accommodate two hands.
+      </div>
+      <div class="ImgItem">
+        <img class="ImgSize" src="images/Katana.jpg" alt="Anvil Logo"/>
+      </div>
+      <div class="pageDivider"></div>
+      <div class="ImgItem">
+        <img class="ImgSize" src="images/Longsword.jpg" alt="Anvil Logo"/>
+      </div>
+      <div class="TextItem">
+        A longsword is a type of European sword characterized as having a cruciform hilt with a grip for primarily two-handed use, a straight double-edged blade of around 80 to 110 cm, and weighing approximately 1 to 1.5 kg.
+      </div>
+      <div class="pageDivider"></div>
+      <div class="TextItem">
+        A rapier or espada ropera is a type of sword with a slender and sharply pointed two-edged blade that was popular in Western Europe, both for civilian use and as a military side arm, throughout the 16th and 17th centuries.
+      </div>
+      <div class="ImgItem">
+        <img class="ImgSize" src="images/Rapier.jpg" alt="Anvil Logo"/>
+      </div>
+      <div class="pageDivider"></div>
+      <div class="ImgItem">
+        <img class="ImgSize" src="images/Claymore.jpg" alt="Anvil Logo"/>
+      </div>
+      <div class="TextItem">
+        A claymore is either the Scottish variant of the late medieval two-handed sword or the Scottish variant of the basket-hilted sword. The former is characterised as having a cross hilt of forward-sloping quillons with quatrefoil terminations and was in use from the 15th to 17th centuries.
+      </div>
+      <div class="pageDivider"></div>
+      <div class="TextItem">
+        a short sword with a curved blade that broadens towards the point, used originally in Eastern countries.
+      </div>
+      <div class="ImgItem">
+        <img class="ImgSize" src="images/Scimitar.jpg" alt="Anvil Logo"/>
+      </div>
+      <div class="pageDivider"></div>
+      <div class="ImgItem">
+        <img class="ImgSize" src="images/Gladius.jpg" alt="Anvil Logo"/>
+      </div>
+      <div class="TextItem">
+        Gladius is a type of sword that was used by ancient Roman foot soldiers starting from the 3rd century BC and until the 3rd century AD.
+      </div>
     </div>
+    <!--history of swords-->
     <div class="page" id="page3">
-      Pattern welded steel swords date back to the first millennium B.C., with Celtic, African, Germanic, and Roman swords first exhibiting the method. 
-      Layered Damascus steel, which is a form of pattern welding, was also used in South Asia, and the Middle East during the Middle Ages. 
-      Chinese swordsmiths are credited with creating the technology that made its way to Korea and Japan, where swordsmiths developed innovative techniques and new weapons such as the katana. 
-      Between 1185–1333 A.D., Japan was under military rule. 
-      This became known as the “Golden era” of Japanese bladesmithing, as they became quick to develop new technology and mastery around swordsmithing out of the necessity of defense. 
-      With the Industrial Revolution came the development of advanced machines and swordsmithing technology. 
-      Traditional smithing methods became less common until resurging fairly recently. 
-      By the mid 20th century, bladesmithing had become a niche industry, kept alive by a small pool of bladesmiths. 
-      In the 1960s, bladesmith William Moran began to revive the ancient pattern welding process of forging Damascus steel. 
-      While the exact traditional methods were not recorded, Moran managed to teach himself the process and published a free booklet detailing the process. 
-      Ultimately, Moran made the swordsmithing process accessible to anyone who wanted to learn. 
-      He founded the American Bladesmith Society in 1976, further expanding the network and resources of both professional and hobbyist bladesmiths.
+      <div id="History1" class="HistoryText TextItem">
+        Pattern welded steel swords date back to the first millennium B.C., with Celtic, African, Germanic, and Roman swords first exhibiting the method. 
+        Layered Damascus steel, which is a form of pattern welding, was also used in South Asia, and the Middle East during the Middle Ages. 
+      </div>
+      <div id="History2" class="HistoryText TextItem">
+        Chinese swordsmiths are credited with creating the technology that made its way to Korea and Japan, where swordsmiths developed innovative techniques and new weapons such as the katana. 
+        Between 1185–1333 A.D., Japan was under military rule. 
+      </div>
+      <div id="History3" class="HistoryText TextItem">
+        This became known as the “Golden era” of Japanese bladesmithing, as they became quick to develop new technology and mastery around swordsmithing out of the necessity of defense. 
+        With the Industrial Revolution came the development of advanced machines and swordsmithing technology. 
+      </div>
+      <div id="History4" class="HistoryText TextItem">
+        Traditional smithing methods became less common until resurging fairly recently. 
+        By the mid 20th century, bladesmithing had become a niche industry, kept alive by a small pool of bladesmiths. 
+      </div>
+      <div id="History5" class="HistoryText TextItem">
+        In the 1960s, bladesmith William Moran began to revive the ancient pattern welding process of forging Damascus steel. 
+        While the exact traditional methods were not recorded, Moran managed to teach himself the process and published a free booklet detailing the process. 
+      </div>
+      <div id="History6" class="HistoryText TextItem">
+        Ultimately, Moran made the swordsmithing process accessible to anyone who wanted to learn. 
+        He founded the American Bladesmith Society in 1976, further expanding the network and resources of both professional and hobbyist bladesmiths.
+      </div>
+      <div class="ImgItem">
+        <div class="scene2">
+          <div class="cube2 show-front">
+            <img class="cube__face cube__face--front" src="images/History1.jpg" alt="Anvil Logo"/>
+            <img class="cube__face cube__face--right" src="images/History2.jpg" alt="Anvil Logo"/>
+            <img class="cube__face cube__face--back" src="images/History3.jpg" alt="Anvil Logo"/>
+            <img class="cube__face cube__face--left" src="images/History4.jpg" alt="Anvil Logo"/>
+            <img class="cube__face cube__face--top" src="images/History5.jpg" alt="Anvil Logo"/>
+            <img class="cube__face cube__face--bottom" src="images/History6.jpg" alt="Anvil Logo"/>
+          </div>
+        </div>
+      </div>
     </div>
     <div class="endbarGroup">
       <div class="endbar">
-        <div class="endbarElement">test</div>
+        <div class="endbarElement">Done By: Kodey Chin</div>
       </div>
     </div>
   </body>
