final final update

--- a/index.html
+++ b/index.html
@@ -1,29 +1,33 @@
-<html>
+<!DOCTYPE html>
+<html lang = "en">
   <head>
     <title>All About Sword Making</title>
-    <link rel="stylesheet" type="text/css" href="./style.css"/>
+    <link rel="stylesheet" type="text/css" href="./style.css">
   </head>
   
   <body>
     <div>
       <!--title-->
       <section>
-        <img src="images/Forging_BG.jpg" alt="Sword Logo"/>
+        <h6>
+          <img src="images/Forging_BG.jpg" alt="Sword Logo">
+        </h6>
       </section>
 
       <div class="titleContainer">
-        <img class="titleImg" src="images/anvil.png" alt="Anvil Logo"/>
+        <img class="titleImg" src="images/anvil.png" alt="Anvil Logo">
         <div class="titleText">
           <p>All You Need To Know About Swords</p>
         </div>
       </div>
     </div>
 
+    <!--menu system-->
     <div>
       <hr>
-      <nav> <!--menu system-->
+      <nav>
         <button id = "hamIcon" class="navBtn">
-          <img class="dropdownMenuImg" src="images/menu.png" alt="dropdown menu"/>
+          <img class="dropdownMenuImg" src="images/menu.png" alt="dropdown menu">
         </button>
         <div class="navBtnGroup">
           <button id="page1btn" class="navBtn">Your First Sword</button>
@@ -33,17 +37,18 @@
       </nav>
       <hr>
     </div>
+
     <!--sword making-->
     <div class="page" id="page1">
       <div class="ImgItem">
         <div class="scene">
           <div class="cube show-front">
-            <img class="cube__face cube__face--front" src="images/Forging1.jpg" alt="Anvil Logo"/>
-            <img class="cube__face cube__face--right" src="images/Forging2.jpg" alt="Anvil Logo"/>
-            <img class="cube__face cube__face--back" src="images/Forging3.jpg" alt="Anvil Logo"/>
-            <img class="cube__face cube__face--left" src="images/Forging4.jpg" alt="Anvil Logo"/>
-            <img class="cube__face cube__face--top" src="images/Forging5.jpg" alt="Anvil Logo"/>
-            <img class="cube__face cube__face--bottom" src="images/Forging6.jpg" alt="Anvil Logo"/>
+            <img class="cube__face cube__face--front" src="images/Forging1.jpg" alt="Forging a Sword 1">
+            <img class="cube__face cube__face--right" src="images/Forging2.jpg" alt="Forging a Sword 2">
+            <img class="cube__face cube__face--back" src="images/Forging3.jpg" alt="Forging a Sword 3">
+            <img class="cube__face cube__face--left" src="images/Forging4.jpg" alt="Forging a Sword 4">
+            <img class="cube__face cube__face--top" src="images/Forging5.jpg" alt="Forging a Sword 5">
+            <img class="cube__face cube__face--bottom" src="images/Forging6.jpg" alt="Forging a Sword 6">
           </div>
         </div>
       </div>
@@ -89,17 +94,18 @@
         After that, your first sword is complete!
       </div>
     </div>
+
     <!--types of swords-->
     <div class="page" id="page2">
       <div class="TextItem">
         A katana is a Japanese sword characterized by a curved, single-edged blade with a circular or squared guard and long grip to accommodate two hands.
       </div>
       <div class="ImgItem">
-        <img class="ImgSize" src="images/Katana.jpg" alt="Anvil Logo"/>
+        <img class="ImgSize" src="images/Katana.jpg" alt="Katana">
       </div>
       <div class="pageDivider"></div>
       <div class="ImgItem">
-        <img class="ImgSize" src="images/Longsword.jpg" alt="Anvil Logo"/>
+        <img class="ImgSize" src="images/Longsword.jpg" alt="Long Sword">
       </div>
       <div class="TextItem">
         A longsword is a type of European sword characterized as having a cruciform hilt with a grip for primarily two-handed use, a straight double-edged blade of around 80 to 110 cm, and weighing approximately 1 to 1.5 kg.
@@ -109,11 +115,11 @@
         A rapier or espada ropera is a type of sword with a slender and sharply pointed two-edged blade that was popular in Western Europe, both for civilian use and as a military side arm, throughout the 16th and 17th centuries.
       </div>
       <div class="ImgItem">
-        <img class="ImgSize" src="images/Rapier.jpg" alt="Anvil Logo"/>
+        <img class="ImgSize" src="images/Rapier.jpg" alt="Rapier">
       </div>
       <div class="pageDivider"></div>
       <div class="ImgItem">
-        <img class="ImgSize" src="images/Claymore.jpg" alt="Anvil Logo"/>
+        <img class="ImgSize" src="images/Claymore.jpg" alt="Claymore">
       </div>
       <div class="TextItem">
         A claymore is either the Scottish variant of the late medieval two-handed sword or the Scottish variant of the basket-hilted sword. The former is characterised as having a cross hilt of forward-sloping quillons with quatrefoil terminations and was in use from the 15th to 17th centuries.
@@ -123,16 +129,17 @@
         a short sword with a curved blade that broadens towards the point, used originally in Eastern countries.
       </div>
       <div class="ImgItem">
-        <img class="ImgSize" src="images/Scimitar.jpg" alt="Anvil Logo"/>
+        <img class="ImgSize" src="images/Scimitar.jpg" alt="Scimitar">
       </div>
       <div class="pageDivider"></div>
       <div class="ImgItem">
-        <img class="ImgSize" src="images/Gladius.jpg" alt="Anvil Logo"/>
+        <img class="ImgSize" src="images/Gladius.jpg" alt="Gladius">
       </div>
       <div class="TextItem">
         Gladius is a type of sword that was used by ancient Roman foot soldiers starting from the 3rd century BC and until the 3rd century AD.
       </div>
     </div>
+
     <!--history of swords-->
     <div class="page" id="page3">
       <div id="History1" class="HistoryText TextItem">
@@ -141,10 +148,10 @@
       </div>
       <div id="History2" class="HistoryText TextItem">
         Chinese swordsmiths are credited with creating the technology that made its way to Korea and Japan, where swordsmiths developed innovative techniques and new weapons such as the katana. 
-        Between 1185–1333 A.D., Japan was under military rule. 
+        Between 1185-1333 A.D., Japan was under military rule. 
       </div>
       <div id="History3" class="HistoryText TextItem">
-        This became known as the “Golden era” of Japanese bladesmithing, as they became quick to develop new technology and mastery around swordsmithing out of the necessity of defense. 
+        This became known as the "Golden era" of Japanese bladesmithing, as they became quick to develop new technology and mastery around swordsmithing out of the necessity of defense. 
         With the Industrial Revolution came the development of advanced machines and swordsmithing technology. 
       </div>
       <div id="History4" class="HistoryText TextItem">
@@ -162,23 +169,26 @@
       <div class="ImgItem">
         <div class="scene2">
           <div class="cube2 show-front">
-            <img class="cube__face cube__face--front" src="images/History1.jpg" alt="Anvil Logo"/>
-            <img class="cube__face cube__face--right" src="images/History2.jpg" alt="Anvil Logo"/>
-            <img class="cube__face cube__face--back" src="images/History3.jpg" alt="Anvil Logo"/>
-            <img class="cube__face cube__face--left" src="images/History4.jpg" alt="Anvil Logo"/>
-            <img class="cube__face cube__face--top" src="images/History5.jpg" alt="Anvil Logo"/>
-            <img class="cube__face cube__face--bottom" src="images/History6.jpg" alt="Anvil Logo"/>
+            <img class="cube__face cube__face--front" src="images/History1.jpg" alt="History of Swords 1">
+            <img class="cube__face cube__face--right" src="images/History2.jpg" alt="History of Swords 2">
+            <img class="cube__face cube__face--back" src="images/History3.jpg" alt="History of Swords 3">
+            <img class="cube__face cube__face--left" src="images/History4.jpg" alt="History of Swords 4">
+            <img class="cube__face cube__face--top" src="images/History5.jpg" alt="History of Swords 5">
+            <img class="cube__face cube__face--bottom" src="images/History6.jpg" alt="History of Swords 6">
           </div>
         </div>
       </div>
     </div>
+
+    <!--endbar-->
     <div class="endbarGroup">
       <div class="endbar">
         <div class="endbarElement">Done By: Kodey Chin</div>
       </div>
     </div>
+
+    <footer>
+      <script src="script.js"></script>
+    </footer>
   </body>
-  <footer>
-    <script src="script.js"></script>
-  </footer>
 </html>
