--- a/webdeva2/index.html
+++ b/webdeva2/index.html
@@ -184,6 +184,9 @@
     <div class="endbarGroup">
       <div class="endbar">
         <div class="endbarElement">Done By: Kodey Chin</div>
+        <div class="endbarImg">
+          <img class="endbarImgSize" src="images/qr.png" alt="QR code">
+        </div>
       </div>
     </div>
 
